[tool.poetry]
name = "jot_form"
version = "0.1.0"
description = ""
authors = ["Aaditya Subedi <subediaaditya007@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
requests = "^2.28.2"
jotform = "^1.2"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
